fix(HIP-423): add corner case

--- a/HIP/hip-423.md
+++ b/HIP/hip-423.md
@@ -332,6 +332,8 @@ As expected, if I submit the required signature before expiration then the trans
 ### Required Signatures
 
 - If sufficient signatures are not received before the `expiration_time`, Scheduled Transactions shall expire when they are evaluated, without executing, in all cases.
+  - There is a corner case where a Scheduled Transaction is still in the database after it's `expiration_time`, pending evaluation, and a `ScheduleSign` or `ScheduleDelete` comes in for it.
+    - Add a `SCHEDULE_PENDING_EXPIRATION` error code for this case.
 
 ### Fees
 
